--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@layout/background">
+    android:background="@layout/background"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btnInfo"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:background="@android:drawable/ic_menu_help"
+        app:layout_constraintBottom_toTopOf="@+id/clContainer"
         app:layout_constraintStart_toStartOf="@id/clContainer"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/clContainer"
-        android:background="@android:drawable/ic_menu_help" />
+        app:layout_constraintVertical_bias="0.1" />
 
     <Button
         android:id="@+id/btnSettings"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:background="@android:drawable/ic_menu_manage"
+        app:layout_constraintBottom_toTopOf="@+id/clContainer"
         app:layout_constraintEnd_toEndOf="@id/clContainer"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/clContainer"
-        android:background="@android:drawable/ic_menu_manage"/>
+        app:layout_constraintVertical_bias="0.1" />
 
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="1 ноября"
         android:layout_marginTop="60dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="1 ноября"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -43,66 +44,67 @@
         android:layout_height="22dp"
         android:clickable="true"
         android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:rotation="90"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toStartOf="@+id/tvDate"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp"
         android:src="@android:drawable/arrow_down_float"
-        android:rotation="90">
-    </ImageView>
+        app:layout_constraintBottom_toBottomOf="@id/tvDate"
+        app:layout_constraintEnd_toStartOf="@+id/tvDate"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvDate" />
 
     <ImageView
         android:id="@+id/ivNextDateArrow"
         android:layout_width="30dp"
         android:layout_height="22dp"
+        android:background="@android:drawable/arrow_up_float"
         android:clickable="true"
         android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:rotation="90"
         android:scaleType="fitCenter"
-        app:layout_constraintStart_toEndOf="@+id/tvDate"
+        app:layout_constraintBottom_toBottomOf="@id/tvDate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp"
-        android:background="@android:drawable/arrow_up_float"
-        android:rotation="90">
-    </ImageView>
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/tvDate"
+        app:layout_constraintTop_toTopOf="@id/tvDate" />
 
     <TextView
         android:id="@+id/tvThanksFor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Благодарю за..."
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvDate"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Благодарю за..."
+        android:textColor="#ff8866cc"
         android:textSize="20sp"
-        android:textColor="#ff8866cc"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/clContainer"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvThanksFor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
         android:layout_margin="20dp"
-        android:layout_height="0dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvThanksFor">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddRecord"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:src="@android:drawable/ic_input_add"
+            android:layout_margin="10dp"
             android:backgroundTint="@android:color/holo_orange_light"
-            android:layout_margin="30dp"/>
+            android:src="@android:drawable/ic_input_add" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="100dp" />
+            android:layout_height="match_parent" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
