implement record editing in RecyclerView by click on its item; editing through AddingGratitudeActivity
implement interface OnGratitudeClickListener
and it's setter in GratitudeAdapter class
for item click handling from any class

set OnGratitudeClickListener on GratitudeAdapter
in MainActivity class and start AddingGratitudeActivity
from onGratitudeClick callback

add ADD_GRATITUDE_REQUEST, EDIT_GRATITUDE_REQUEST,
EXTRA_RECORD_TEXT, EXTRA_TEXT_TO_EDIT

change onActivityResult for adding and editing records

set OnClickListener on itemView instead of tvText
inside it in GratitudeAdapter class

rename setRecordText to setGratitude

--- a/app/src/main/res/layout/activity_adding_gratitude.xml
+++ b/app/src/main/res/layout/activity_adding_gratitude.xml
@@ -14,7 +14,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="10dp"
-        tools:text="Еще одна благодарность" />
+        tools:text="Еще одна благодарность">
+        <requestFocus/>
+    </EditText>
 
     <Button
         android:id="@+id/btnSaveRecord"
