--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@android:drawable/ic_menu_help"
+        android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toTopOf="@+id/clContainer"
         app:layout_constraintStart_toStartOf="@id/clContainer"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +23,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@android:drawable/ic_menu_manage"
+        android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toTopOf="@+id/clContainer"
         app:layout_constraintEnd_toEndOf="@id/clContainer"
         app:layout_constraintTop_toTopOf="parent"
