--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="20dp">
+    android:padding="20dp"
+    android:background="?android:attr/selectableItemBackground">
     <TextView
         tools:text = "За то, что я живу на белом свете"
         android:id="@+id/tvText"
