--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -13,8 +13,8 @@
         android:layout_height="40dp"
         android:background="@android:drawable/ic_menu_help"
         android:foreground="?android:attr/selectableItemBackground"
-        app:layout_constraintBottom_toTopOf="@+id/clContainer"
-        app:layout_constraintStart_toStartOf="@id/clContainer"
+        app:layout_constraintBottom_toTopOf="@+id/clGratitudesContainer"
+        app:layout_constraintStart_toStartOf="@id/clGratitudesContainer"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1" />
 
@@ -24,8 +24,8 @@
         android:layout_height="40dp"
         android:background="@android:drawable/ic_menu_manage"
         android:foreground="?android:attr/selectableItemBackground"
-        app:layout_constraintBottom_toTopOf="@+id/clContainer"
-        app:layout_constraintEnd_toEndOf="@id/clContainer"
+        app:layout_constraintBottom_toTopOf="@+id/clGratitudesContainer"
+        app:layout_constraintEnd_toEndOf="@id/clGratitudesContainer"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1" />
 
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/clContainer"
+        android:id="@+id/clGratitudesContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
@@ -103,8 +103,17 @@
             android:backgroundTint="@android:color/holo_orange_light"
             android:src="@android:drawable/ic_input_add" />
 
+        <Button
+            android:id="@+id/btnCalendar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="bottom|start"
+            android:layout_margin="10dp"
+            android:background="@android:drawable/ic_menu_my_calendar"
+            android:foreground="?android:attr/selectableItemBackground" />
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/rvGratitudes"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
