--- a/app/src/main/res/layout/item_date.xml
+++ b/app/src/main/res/layout/item_date.xml
@@ -7,8 +7,7 @@
     android:layout_height="50dp"
     android:padding="8dp"
     android:layout_margin="16dp"
-    android:background="#F48FB1"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:background="@drawable/item_date_ripple_background"
     android:clickable="true"
     android:focusable="true">
 
